chore: improve desktop layout fix: use correct logo in play mode feat: prevent playing in landscape mode on mobile devices feat: redirect when game state is not ready on refresh/first load

--- a/roshambo-ui/src/Capture.module.css
+++ b/roshambo-ui/src/Capture.module.css
@@ -3,8 +3,7 @@
   @apply rounded-xl;
   @apply border-solid;
   @apply border-2;
-  @apply h-28;
-  
+  @apply max-w-sm;
 }
 
 .selected {
